# context-leakage-team

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  fly.toml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: test.yml
context_leakage_team/: __init__.py  context_leakage_team.py  log_context_leakage.py  model_adapter.py  test.py  test_model_adapter.py
context_leakage_team/agent_configs/context_leakage_black_box/: context_leakage_black_box_config.py  system_prompt_0.md  system_prompt_1.md
context_leakage_team/agent_configs/context_leakage_classifier/: context_leakage_classifier_config.py  system_prompt.md  system_prompt_1.md
context_leakage_team/deployment/: main_1_fastapi.py  main_2_mesop.py
context_leakage_team/local/: main_console.py  main_mesop.py
context_leakage_team/model_configs/: __init__.py
context_leakage_team/model_configs/context_leakage_black_box/: system_prompt.md
context_leakage_team/model_configs/context_leakage_classifier/: system_prompt.md
context_leakage_team/openapi/: __init__.py
context_leakage_team/tested_chatbots/: chatbots_router.py  config.py  openai_client.py  service.py
context_leakage_team/tested_chatbots/prompts/: confidential.md  high.json  medium.json
context_leakage_team/tools/: log_context_leakage.py  model_adapter.py
context_leakage_team/workflow/: __init__.py  base64_context_leak.py  llm_config.py  simple_context_leak.py  workflow.py
context_leakage_team/workflow/agents/: __init__.py
context_leakage_team/workflow/agents/context_leakage_black_box/: context_leakage_black_box.py  system_message.md
context_leakage_team/workflow/agents/context_leakage_classifier/: context_leakage_classifier.py  system_message.md
context_leakage_team/workflow/scenarios/: __init__.py  base64.py  scenario.py  scenario_template.py  simple.py
context_leakage_team/workflow/scenarios/context_leak/: base64.py  context_leak_scenario.py  simple.py
context_leakage_team/workflow/scenarios/prompt_leak/: __init__.py  prompt_leak_scenario.py
context_leakage_team/workflow/tools/: log_context_leakage.py
docker/: Dockerfile
docker/content/: run_fastagency.sh
prompt_leakage_probing/deployment/: main_1_fastapi.py  main_2_mesop.py
prompt_leakage_probing/tested_chatbots/: chatbots_router.py  openai_client.py  prompt_loader.py  service.py
prompt_leakage_probing/tested_chatbots/prompts/: low.json  non_confidential.md
prompt_leakage_probing/workflow/: __init__.py  workflow.py
prompt_leakage_probing/workflow/agents/: __init__.py
prompt_leakage_probing/workflow/agents/prompt_leakage_black_box/: prompt_leakage_black_box.py  system_message.md
prompt_leakage_probing/workflow/agents/prompt_leakage_classifier/: prompt_leakage_classifier.py  system_message.md
prompt_leakage_probing/workflow/scenarios/: scenario_template.py
prompt_leakage_probing/workflow/scenarios/prompt_leak/: base64.py  prompt_leak_scenario.py  simple.py
prompt_leakage_probing/workflow/tools/: log_prompt_leakage.py
reports/: base64_context_leak.csv  simple_context_leak.csv
resources/airt-chatbots/: Dockerfile  config.json.example  config.py  generate-openapi-docs.py  main.py  openai_client.py  openapi.json  prompt_loader.py  pyproject.toml  service.py
resources/airt-chatbots/prompts/: high.json  low.json  medium.json
scripts/: lint.sh  run_fastapi_locally.sh  run_mesop_locally.sh  static-analysis.sh
tested_model_config copy/: tested_model_api_config.json.example
tests/: test_model_adapter.py
