[tool.poetry]
name = "airt-new"
version = "0.1.0"
description = ""
authors = ["Ante Bilić <159117552+AnteBilic2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.46.0"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
